# PicoRust

./: Cargo.toml  build.sh
src/: display.rs  framebuffer.rs  main.rs  matrix.rs  model.rs  pixel_ops.rs  text.rs  vector.rs
