[package]
name = "picotest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = ">=0.6.15,<0.8"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
eh1_0_alpha = { version = "=1.0.0-alpha.7", package="embedded-hal", optional=true }
embedded-time = "0.12.1"
itertools = { version = "0.10.1", default-features = false }
nb = "1.0"
rp2040-pac = "0.3.0"
paste = "1.0"
pio = "0.2.0"
rp2040-hal = "0.4.0"
rp2040-hal-macros = "0.1.0"
usb-device = "0.2.8"
vcell = "0.1"
void = { version = "1.0.2", default-features = false }
rand_core = "0.6.3"
critical-section = { version = "0.2.4", features = ["custom-impl"] }
panic-halt = "0.2.0"
rp2040-boot2 = "0.2.0"
display-interface = "0.4"
display-interface-spi = "0.4"
st7789 = "0.6.1"
embedded-graphics = "0.7"
libm = "0.2.2"

futures = { version = "0.3", default-features = false, optional = true }
chrono = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
cortex-m-rt = "0.7"
hd44780-driver = "0.4.0"
pio-proc = "0.2.0"
dht-sensor = "0.2.1"